--- a/module-3/Nebel_EX2.css
+++ b/module-3/Nebel_EX2.css
@@ -36,14 +36,18 @@ address a {
 	font-color: #4F3674;
 	text-decoration: none;
 }
-address a: hover {
-	text-decoration: underline;
-	background-color: #D6A800: 
-}
-address a: visited {
+address a:visited {
 	font-color: #FF0000;
-	text-decoration: line-through;
+	font-style: italic;
 }
+address a:hover {
+    text-decoration: underline;
+    background-color: #D6A800;
+}
+address a:active {
+	font-color: #FF0000;
+}
+
 .sentence {
 	font-style: italic;
 }
